# world_chronicles

./: .clang-format  .gitattributes  CMakeLists.txt  CPPLINT.cfg  Description.md  README.md  helpers.cmake  shell.nix
constants/: GeneralSettings.ini
constants/buildings/: Castle.ini
libs/: CMakeLists.txt
libs/ini_parser/: IniParser.cpp  IniParser.h
libs/raygui/: CMakeLists.txt  raygui.h
libs/string/: CMakeLists.txt  String.cpp  String.h
libs/string/tests/: StringTests.cpp
source/: Constants.h  main.cpp
source/base/: Building.h
source/buildings/: BuildingConstants.h  Castle.h
